--- a/404.md
+++ b/404.md
@@ -5,7 +5,8 @@ permalink: 404.html
 indexing: false
 sitemap: false
 layout: page
-feature_text: # 404
+feature_text: |
+  # 404
 feature_image: /assets/img/bg.jpg
 ---
 
