--- a/_pages/404.markdown
+++ b/_pages/404.markdown
@@ -1,7 +1,7 @@
 ---
 title: "404"
 excerpt: "Page Not Found"
-permalink: 404.html
+permalink: /404.html
 indexing: false
 sitemap: false
 layout: page
